MSI: Use the effective APIC id of the boot CPU for the address destination.

* This should only affect systems where the CPU ids aren't sequential (mostly
non Intel).
* Fixes #9807.