headers/private/kernel/arch/x86/msi.h
@@ -24,7 +24,6 @@
 #define MSI_DELIVERY_MODE_EXT_INT		0x00000700
 
 
-void		msi_init();
 bool		msi_supported();
 status_t	msi_allocate_vectors(uint8 count, uint8 *startVector,
 				uint64 *address, uint16 *data);
