headers/private/kernel/arch/x86/msi_priv.h
@@ -1,0 +1,12 @@
+/*
+ * Copyright 2010-2011, Michael Lotz, mmlr@mlotz.ch. All Rights Reserved.
+ * Distributed under the terms of the MIT license.
+ */
+#ifndef _KERNEL_ARCH_x86_MSI_PRIV_H
+#define _KERNEL_ARCH_x86_MSI_PRIV_H
+
+
+void msi_init(kernel_args* args);
+
+
+#endif // _KERNEL_ARCH_x86_MSI_PRIV_H
